# AT4VG

./: CMakeLists.txt
include/: at_interface.h  logger.h  pid_controller.h
scripts/: docker_build_imx8mini.sh  docker_build_vg800.sh  start_ssh_tunnel.sh
src/: at_interface.cpp
test/libcap/vg800/inc/: cam_cap.h  mem_manager.h  rpmsg.h  v4l2Capture.h
test/server_test/: client.py  server.cpp
